fixing collapsable quotes YOSPOS read styling

--- a/src/219.css
+++ b/src/219.css
@@ -517,7 +517,7 @@ td.postbody iframe {
 	color: #57FF57;
 }
 
-tr.altcolor1, tr.altcolor2, tr.seen1, tr.seen2 {
+tr.altcolor1, tr.altcolor2 {
 	.collapseInner {
 		background-image: linear-gradient(0deg, #000 55%, transparent);
 		color: #57FF57;
@@ -525,6 +525,18 @@ tr.altcolor1, tr.altcolor2, tr.seen1, tr.seen2 {
 
 	.expandFade {
 		mask-image: linear-gradient(180deg, #000 20%, transparent);
+		color: #57FF57;
+	}
+}
+
+tr.seen1, tr.seen2 {
+	.collapseInner {
+		background-image: linear-gradient(0deg, #114211 55%, transparent);
+		color: #57FF57;
+	}
+
+	.expandFade {
+		mask-image: linear-gradient(180deg, #114211 20%, transparent);
 		color: #57FF57;
 	}
 }
